<resources>
    <string name="app_name">Weather_Application</string>
    <string name="todo">TODO</string>
    <string name="weather_update">Weather Update</string>
    <string name="enter_city_name">Enter City Name</string>
    <string name="enter_country_code_optional">Enter Country Code (Optional)</string>
    <string name="button">Button</string>
    <string name="get_details">Get Details</string>
    <string name="textview">TextView</string>
</resources>